<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:layout_gravity="center"
    android:gravity="center"
    android:background="@color/colorWhite"

    android:orientation="vertical">


    <TextView
        style="@style/BigText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textInFirstView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/inputCityLayout"
        style="@style/AllText"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/inputCity"
            style="@style/AllText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintFindCity" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/buttonMoscow"
        style="@style/AllText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/TextHeaderButton" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <CheckBox
                android:id="@+id/checkboxTemp"
                style="@style/AllText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/temp" />

            <CheckBox
                android:id="@+id/checkboxPresur"
                style="@style/AllText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/presur" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <CheckBox
                android:id="@+id/checkBoxRainfall"
                style="@style/AllText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rainfals" />

            <CheckBox
                android:id="@+id/checkBoxMagnit"
                style="@style/AllText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/magnitField" />

        </TableRow>

    </TableLayout>

</LinearLayout>